Added exponential ElGamal and corrected bibliography

--- a/bib/bibliography.bib
+++ b/bib/bibliography.bib
@@ -83,12 +83,36 @@
 }
 
 @inproceedings{HKRS12,
-	author = {Khader, Dalia and Hao, Feng and Ryan, Peter Y. A. and Smyth, Ben},
-	title = {A Fair and Robust Voting System by Broadcast},
-	year = {2012},
-	booktitle = {EVOTE'12: 5th International Conference on Electronic Voting},
-	note = {"To appear."},
+  author    = {Dalia Khader and
+               Ben Smyth and
+               Peter Y. A. Ryan and
+               Feng Hao},
+  title     = {A Fair and Robust Voting System by Broadcast},
+  booktitle = {Electronic Voting},
+  year      = {2012},
+  pages     = {285-299},
+  crossref  = {DBLP:conf/ev/2012},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
 }
+
+@proceedings{DBLP:conf/ev/2012,
+  editor    = {Manuel J. Kripp and
+               Melanie Volkamer and
+               R{\"u}diger Grimm},
+  title     = {5th International Conference on Electronic Voting 2012,
+               (EVOTE 2012), Co-organized by the Council of Europe, Gesellschaft
+               f{\"u}r Informatik and E-Voting.CC, July 11-14, 2012, Castle
+               Hofen, Bregenz, Austria},
+  booktitle = {Electronic Voting},
+  publisher = {GI},
+  series    = {LNI},
+  volume    = {205},
+  year      = {2012},
+  isbn      = {978-3-88579-299-4},
+  bibsource = {DBLP, http://dblp.uni-trier.de}
+}
+
+
 
 @inproceedings{HS11,
 	author = {Haenni, Rolf and Spycher, Oliver},
